--- a/app/src/main/res/layout/fragment_winner.xml
+++ b/app/src/main/res/layout/fragment_winner.xml
@@ -106,8 +106,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_highScore"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name_highScoreList" />
