--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,6 +23,7 @@
         android:layout_width="250dp"
         android:layout_height="30dp"
         android:layout_marginTop="75dp"
+        android:singleLine="true"
         android:background="@color/buttonColor"
         android:fontFamily="@font/turret_road_regular"
         android:hint="Navn"
