--- a/app/src/main/res/layout/fragment_loser.xml
+++ b/app/src/main/res/layout/fragment_loser.xml
@@ -62,4 +62,17 @@
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/spaceman" />
 
+    <Button
+        android:id="@+id/main_menu_loser"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/futuristic_button"
+        android:fontFamily="@font/turret_road_bold"
+        android:text="Main menu"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
