--- a/app/src/main/res/layout/fragment_winner.xml
+++ b/app/src/main/res/layout/fragment_winner.xml
@@ -108,9 +108,23 @@
         android:layout_width="300dp"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@id/main_menu_winner"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name_highScoreList" />
+
+    <Button
+        android:id="@+id/main_menu_winner"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/futuristic_button"
+        android:fontFamily="@font/turret_road_bold"
+        android:text="Main menu"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
