--- a/app/src/main/res/layout/fragment_choose_word.xml
+++ b/app/src/main/res/layout/fragment_choose_word.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background">
 
     <TextView
         android:id="@+id/title_choose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/turret_road_bold"
         android:text="Vælg et ord"
         android:textColor="#FFF"
         android:textSize="30sp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/write_word"
         android:layout_width="250dp"
         android:layout_height="30dp"
-        android:textColor="#FFF"
         android:layout_marginTop="25dp"
         android:background="@color/buttonColor"
-        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/turret_road_regular"
+        android:hint="Skriv selv et ord"
+        android:textColor="#FFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_choose"
-        android:hint="Skriv selv et ord" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_choose" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,18 +37,18 @@
         android:fontFamily="@font/turret_road_regular"
         android:text="Eller"
         android:textColor="#FFF"
-        app:layout_constraintBottom_toTopOf="@id/frame_choose_word"
-        app:layout_constraintTop_toBottomOf="@id/write_word"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <FrameLayout
-        android:id="@+id/frame_choose_word"
-        android:layout_width="250dp"
-        android:layout_height="400dp"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView_choose_word"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/write_word" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_choose_word"
+        android:layout_width="250dp"
+        android:layout_height="400dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/write_word" />
 
 
