--- a/app/src/main/res/layout/word_row.xml
+++ b/app/src/main/res/layout/word_row.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:background="#000">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/word_choose"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Ord"
+        android:layout_marginTop="20dp"
+        android:background="#B33E3D3D"
         android:fontFamily="@font/turret_road_regular"
-        android:textSize="25sp"
-        android:textColor="#FFF"
         android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Ord"
+        android:textColor="#FFF"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
