--- a/app/src/main/res/layout/fragment_choose_word.xml
+++ b/app/src/main/res/layout/fragment_choose_word.xml
@@ -22,6 +22,7 @@
         android:id="@+id/write_word"
         android:layout_width="250dp"
         android:layout_height="30dp"
+        android:digits="abcdefghijklmnopqrstuvwxyzæøåABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅ"
         android:layout_marginTop="25dp"
         android:background="@color/buttonColor"
         android:fontFamily="@font/turret_road_regular"
@@ -46,10 +47,22 @@
         android:id="@+id/recyclerView_choose_word"
         android:layout_width="250dp"
         android:layout_height="400dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/start_button_choose"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/write_word" />
 
+    <Button
+        android:id="@+id/start_button_choose"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/futuristic_button"
+        android:fontFamily="@font/turret_road_bold"
+        android:text="Start spil"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
